# programming-with-python-24-mandatory-tasks

./: README.md  alien.py  matrix.py  pyproject.toml
matrix/: __init__.py  matrix2Dim.py
tests/: test_matrix2Dim.py
