[tool.poetry]
name = "programming-with-python-24-mandatory-tasks"
version = "0.1.0"
description = ""
authors = ["Gion Rubitschung <gionrubi@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["-vv"]
testpaths = ["tests"]